UI issue in search,view profile,overflow UI fixed

--- a/src/app/search-cook/search-cook.component.css
+++ b/src/app/search-cook/search-cook.component.css
@@ -102,3 +102,7 @@ li.list-group-item {
 .scroll-container{
     position: relative;
 }
+
+.search-box > .search-result >  .cook-box, .search-box > .search-container {
+    font-family: "Times New Roman", Times, serif;
+}
