--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'https://fonts.googleapis.com/css?family=Lobster&display=swap';
 
+body{ 
+    overflow-x: hidden;
+}
+
 .mg-8 {
     margin-top: 8vh;
 }
